gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
spec:
  selector:
    matchLabels:
      app: gitea
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - image: gitea/gitea:1.15.10
          name: gitea
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              memory: 4Gi
          ports:
            - containerPort: 3000
              name: gitea
            - containerPort: 22
              name: git-ssh
          volumeMounts:
            - mountPath: /data
              name: gitea-data
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data
