gitea/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
  labels:
    version: gitea
spec:
  selector:
    matchLabels:
      app: gitea
  replicas : 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: arm64
      containers:
      - image: docker.ttys0.net/ghost-arm64:1.23.1-2
        name: ghost-beezuscomplex
        ports:
        - containerPort: 2368
        volumeMounts:
        - name: beezuscomplex-content
          mountPath: /var/lib/ghost/content
        - name: beezuscomplex-config
          mountPath: /var/lib/ghost/config.production.json
          subPath: config.production.json
      volumes:
      - name: beezuscomplex-content
        persistentVolumeClaim:
          claimName: beezuscomplex-content
      # kubectl create configmap beezuscomplex-config -n ingress-nginx --from-file=config.json
      - name: beezuscomplex-config
        configMap:
          name: beezuscomplex-config
          items:
          - key: config.json
            path: config.production.json
      imagePullSecrets:
        - name: docker-reg-secret
