gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
spec:
  ports:
    - port: 3000
      name: gitea
      targetPort: 3000
    - port: 22
      name: git-ssh
      targetPort: 22
  selector:
    app: gitea
