gitea/gitea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
spec:
  selector:
    matchLabels:
      app: gitea
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - image: gitea/gitea:1.12.6
          name: gitea
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              memory: 4Gi
          ports:
            - containerPort: 3000
              name: gitea
            - containerPort: 22
              name: git-ssh
          volumeMounts:
            - mountPath: /data
              name: gitea-data
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
spec:
  ports:
    - port: 3000
      name: gitea
      targetPort: 3000
    - port: 22
      name: git-ssh
      targetPort: 22
  selector:
    app: gitea
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.kubernetes.io/ssl-redirect: "true"
    nginx.kubernetes.io/proxy-body-size: "50m"
    acme.kubernetes.io/enable: "true"
    acme.kubernetes.io/dns: "dns_cf"
spec:
  rules:
    - host: git.skj.dev
      http:
        paths:
          - path: /
            backend:

              serviceName: gitea
              servicePort: 3000
          - backend:
              serviceName: gitea
              servicePort: 22
  tls:
    - hosts:
        - git.skj.dev
      secretName: gitskjdev-tls
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitea-ext
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.kubernetes.io/ssl-redirect: "true"
    nginx.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: git.skj.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: gitea
              servicePort: 3000
  tls:
    - hosts:
        - git.skj.dev
      secretName: gitskjdev-tls
